k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: printodo-api
  labels:
    app: printodo-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: printodo-api
  template:
    metadata:
      labels:
        app: printodo-api
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: printodo-api
          image: ghcr.io/moosilauke18/printodo-api:latest
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "500m"
